k8s/modelrunner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modelrunner
  namespace: ufo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modelrunner
  template:
    metadata:
      labels:
        app: modelrunner
    spec:
      containers:
        - name: modelrunner
          image: localhost:5001/modelrunner:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: modelrunner
  namespace: ufo-app
spec:
  selector:
    app: modelrunner
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
