k8s/ufobackend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ufobackend
  namespace: ufo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ufobackend
  template:
    metadata:
      labels:
        app: ufobackend
    spec:
      containers:
        - name: ufobackend
          image: localhost:5001/ufobackend:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ufobackend
  namespace: ufo-app
spec:
  selector:
    app: ufobackend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
