k8s/ufodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ufodb
  namespace: ufo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ufodb
  template:
    metadata:
      labels:
        app: ufodb
    spec:
      containers:
        - name: ufodb
          image: localhost:5001/ufodb:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ufodb
  namespace: ufo-app
spec:
  selector:
    app: ufodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
