k8s/ufomap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ufomap
  namespace: ufo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ufomap
  template:
    metadata:
      labels:
        app: ufomap
    spec:
      containers:
        - name: ufomap
          image: localhost:5001/ufomap:latest
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: ufomap
  namespace: ufo-app
spec:
  selector:
    app: ufomap
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
